# scrapinator

./: .claude-worktrees.rc  .coveragerc  .env.example  .envrc.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  make.sh  pyproject.toml  pyrightconfig.json  pytest.ini  worktree.rc
.claude/: settings.local.json
.github/workflows/: ci.yml
benchmarks/playwright_performance/: performance_benchmarks.py
doc/: error_handling.md  git_worktree_workflow.md  playwright_best_practices.md  prompt_templates.md  web_task_automation_system.md
doc/llm_strategies/: recommendations.md  research_findings.md  strategy_comparison.md
doc/llm_strategies/examples/: README.md  element_extraction_prompts.py  html_to_markdown.py  html_truncation.py
doc/llm_strategies/examples/utils/: llm_clients.py  metrics.py
doc/playwright_best_practices/: README.md  playwright_best_practices.md
doc/playwright_best_practices/examples/: README.md  browser_pool_manager.py  efficient_page_loading.py  element_discovery_patterns.py  error_handling_patterns.py
examples/: README.md  task_analyzer_demo.py
examples/llm_strategies/: README.md
examples/llm_strategies/utils/: html_utils.py
examples/playwright_best_practices/: README.md  browser_pool_manager.py  efficient_page_loading.py  element_discovery_patterns.py  error_handling_patterns.py  security_patterns.py
src/: __init__.py  analyzer.py  constants.py  exceptions.py  llm_client.py  llm_provider.py
src/models/: __init__.py  task.py
src/prompts/: __init__.py  task_analysis.py
src/utils/: __init__.py  json_utils.py
tests/: README.md  test_analyzer.py  test_exceptions.py  test_json_utils.py  test_models.py  test_prompts.py
tests/integration/: __init__.py  test_task_analyzer_e2e.py
tests/integration/fixtures/: task_descriptions.py
